syntax = "proto3";

package passbook;

option go_package = "github.com/22Fariz22/passbook";

import "google/protobuf/timestamp.proto";


message Auth{
  string login = 1;
  string password = 2;
}

message Token{
  string token = 1;
}

message AuthResponse{
}

message LoginParole{
  string login = 1;
  string password = 2;
  google.protobuf.Timestamp time = 3;
}

message Text{
  string text_data = 1;
  google.protobuf.Timestamp time = 2;
}

message Binary{
  bytes binary_data = 1;
  google.protobuf.Timestamp time = 2;
}

message Card{
  string card_number = 1;
  string expiration_data = 2;
  string card_holder_name  = 3;
  string cvc_code = 4;
  google.protobuf.Timestamp time = 5;
}

service Service{
  rpc SignIn(Auth) returns();
  rpc SignUp(Auth) returns(Token);
  rpc Add() returns();
  rpc Get() returns();
}